--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,34 @@
-# Local .terraform directories
+# Terraform
 **/.terraform/*
-
-# .tfstate files
-*.tfstate
-*.tfstate.*
-
-# Crash log files
+**/.terragrunt-cache/*
+*.tfstate*
+.terraform.lock.*
 crash.log
 
-# Ignore any .tfvars files that are generated automatically for each Terraform run. Most
-# .tfvars files are managed as part of configuration and so should be included in
-# version control.
-#
-# example.tfvars
+# Secrets are not allowed in general
+*.key
+*.pem
 
-# Ignore override files as they are usually used to override resources locally and so
-# are not checked in
-override.tf
-override.tf.json
-*_override.tf
-*_override.tf.json
+# Secrets are encrypted using git-crypt
+!secrets/*
 
-# Include override files you do wish to add to version control using negated pattern
-#
-# !example_override.tf
+# OS X
+.history
+.DS_Store
 
-# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
-# example: *tfplan*
+# IntelliJ
+.idea_modules
+*.iml
+*.iws
+*.ipr
+.idea/
+build/
+*/build/
+
+# Temp files:
+*~
+*.swp
+.DS_Store
+
+# Files contain credentials info:
+/credentials.*
